Revamp personal website with new content and styles
Updated personal website details including title, styles, and content sections. Enhanced layout and added internationalization support.

--- a/index.html
+++ b/index.html
@@ -3,43 +3,533 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Website</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>Osama Abderahman - Senior Software Engineer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lora:wght@400;500&display=swap" rel="stylesheet">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Premium color palette with cream and deep tones */
+        :root {
+            --bg-primary: #faf8f3;
+            --bg-secondary: #f3f0eb;
+            --bg-dark: #1a1a1a;
+            --text-primary: #1a1a1a;
+            --text-secondary: #6b6b6b;
+            --accent-primary: #8b7355;
+            --accent-gold: #d4a574;
+            --border-color: #e8e4de;
+            --transition: all 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        }
+
+        /* New elegant typography with serif fonts */
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            font-family: 'Lora', serif;
+            background-color: var(--bg-primary);
+            color: var(--text-primary);
+            line-height: 1.8;
+            min-height: 100vh;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        /* Subtle background gradient */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, #faf8f3 0%, #f3f0eb 100%);
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        /* Language Support */
+        html[lang="ar"] {
+            direction: rtl;
+        }
+
+        html[lang="ar"] body {
+            font-family: 'Lora', 'Segoe UI', serif;
+        }
+
+        /* Elegant fixed header */
+        header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 100;
+            padding: 2rem 2rem;
+            backdrop-filter: blur(15px);
+            background: rgba(250, 248, 243, 0.9);
+            border-bottom: 1px solid var(--border-color);
+        }
+
+        .header-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: var(--accent-primary);
+            text-decoration: none;
+            letter-spacing: 0.05em;
+        }
+
+        .lang-switcher {
+            display: flex;
+            gap: 0.5rem;
+            background: transparent;
+            padding: 0;
+        }
+
+        .lang-btn {
+            padding: 0.6rem 1.2rem;
+            background: transparent;
+            color: var(--text-secondary);
+            border: 1px solid var(--border-color);
+            cursor: pointer;
+            border-radius: 2px;
+            font-weight: 500;
+            font-size: 0.85rem;
+            transition: var(--transition);
+            font-family: 'Lora', serif;
+            letter-spacing: 0.03em;
+        }
+
+        .lang-btn.active {
+            background: var(--accent-primary);
+            color: var(--bg-primary);
+            border-color: var(--accent-primary);
+        }
+
+        .lang-btn:hover {
+            border-color: var(--accent-primary);
+            color: var(--accent-primary);
+        }
+
+        /* Main Container */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
+            position: relative;
+            z-index: 1;
+        }
+
+        /* Elegant hero section with refined spacing */
+        .hero {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 5rem;
+            align-items: center;
+            padding: 12rem 0 6rem 0;
+            min-height: 100vh;
+        }
+
+        .hero-content h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: clamp(3.5rem, 6vw, 5rem);
+            font-weight: 700;
+            line-height: 1.1;
+            margin-bottom: 1.5rem;
+            color: var(--text-primary);
+            letter-spacing: -0.01em;
+        }
+
+        .hero-content .tagline {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.5rem;
+            color: var(--accent-primary);
+            margin-bottom: 2rem;
+            font-weight: 600;
+            letter-spacing: 0.05em;
+        }
+
+        .hero-content .description {
+            font-size: 1.1rem;
+            color: var(--text-secondary);
+            margin-bottom: 3rem;
+            line-height: 1.9;
+            max-width: 90%;
+        }
+
+        /* Refined profile image with elegant border */
+        .profile-image {
+            width: 100%;
+            aspect-ratio: 1;
+            background: var(--bg-dark);
+            border: 1px solid var(--border-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+            transition: var(--transition);
+            position: relative;
+        }
+
+        .profile-image::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, transparent 0%, rgba(212, 165, 116, 0.1) 100%);
+            pointer-events: none;
+            z-index: 2;
+        }
+
+        .profile-image:hover {
+            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.15);
+            transform: translateY(-5px);
+        }
+
+        .profile-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .profile-placeholder {
+            font-size: 5rem;
+            opacity: 0.3;
+        }
+
+        /* New section styling with elegant borders */
+        .about-section {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 5rem;
+            align-items: center;
+            padding: 6rem 0;
+            border-top: 1px solid var(--border-color);
+        }
+
+        .about-section:last-of-type {
+            border-bottom: 1px solid var(--border-color);
+        }
+
+        .about-section h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2.8rem;
+            margin-bottom: 1.5rem;
+            color: var(--text-primary);
+            font-weight: 700;
+            letter-spacing: -0.01em;
+        }
+
+        .about-section p {
+            font-size: 1.05rem;
+            color: var(--text-secondary);
+            line-height: 1.9;
+            margin-bottom: 1.5rem;
+        }
+
+        .section-accent {
+            display: inline-block;
+            color: var(--accent-primary);
+            font-weight: 600;
+            letter-spacing: 0.05em;
+            margin-bottom: 1rem;
+            font-size: 0.9rem;
+        }
+
+        .image-placeholder {
+            width: 100%;
+            aspect-ratio: 4/3;
+            background: linear-gradient(135deg, #e8e4de 0%, #d4c5b9 100%);
+            border: 1px solid var(--border-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: rgba(26, 26, 26, 0.2);
+            font-size: 4rem;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.08);
+        }
+
+        /* Social section redesigned */
+        .social-section {
+            padding: 8rem 0;
+            text-align: center;
+            border-top: 1px solid var(--border-color);
+        }
+
+        .social-section h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2.8rem;
+            margin-bottom: 4rem;
+            color: var(--text-primary);
+            font-weight: 700;
+            letter-spacing: -0.01em;
+        }
+
+        .social-icons {
+            display: flex;
+            gap: 3rem;
+            justify-content: center;
+            margin-bottom: 4rem;
+            flex-wrap: wrap;
+        }
+
+        .social-link {
+            width: 70px;
+            height: 70px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: var(--bg-primary);
+            border: 1.5px solid var(--border-color);
+            color: var(--accent-primary);
+            text-decoration: none;
+            font-size: 1.5rem;
+            transition: var(--transition);
+            position: relative;
+        }
+
+        .social-link::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: var(--accent-primary);
+            top: 0;
+            left: 0;
+            z-index: -1;
+            transition: var(--transition);
+            transform: scaleY(0);
+            transform-origin: bottom;
+        }
+
+        .social-link:hover::before {
+            transform: scaleY(1);
+        }
+
+        .social-link:hover {
+            color: var(--bg-primary);
+            border-color: var(--accent-primary);
+        }
+
+        /* Elegant footer */
+        footer {
+            text-align: center;
+            padding: 4rem 0;
+            border-top: 1px solid var(--border-color);
+            color: var(--text-secondary);
+            font-size: 0.95rem;
+            letter-spacing: 0.03em;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            header {
+                padding: 1.5rem;
+            }
+
+            .header-content {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .hero, .about-section {
+                grid-template-columns: 1fr;
+                gap: 3rem;
+                padding: 4rem 0;
+            }
+
+            .hero {
+                padding: 8rem 0 4rem 0;
+            }
+
+            .hero-content h1 {
+                font-size: 2.5rem;
+            }
+
+            .hero-content .tagline {
+                font-size: 1.2rem;
+            }
+
+            .hero-content .description {
+                max-width: 100%;
+            }
+
+            .about-section h2 {
+                font-size: 2rem;
+            }
+
+            .container {
+                padding: 0 1.5rem;
+            }
+
+            .social-icons {
+                gap: 2rem;
+            }
+
+            .social-link {
+                width: 60px;
+                height: 60px;
+                font-size: 1.2rem;
+            }
+
+            .social-section {
+                padding: 4rem 0;
+            }
+
+            .social-section h2 {
+                font-size: 2rem;
+            }
+        }
+    </style>
 </head>
 <body>
+    <!-- Elegant header with logo -->
+    <header>
+        <div class="header-content">
+            <a href="#" class="logo" data-i18n="logo">OA</a>
+            <div class="lang-switcher">
+                <button class="lang-btn active" data-lang="en">English</button>
+                <button class="lang-btn" data-lang="ar">العربية</button>
+            </div>
+        </div>
+    </header>
+
+    <!-- Main Content -->
     <div class="container">
-        <header>
+        <!-- Refined hero section -->
+        <section class="hero">
+            <div class="hero-content">
+                <h1 data-i18n="name">Osama Abderahman</h1>
+                <p class="tagline" data-i18n="title">Senior Software Engineer</p>
+                <p class="description" data-i18n="intro">Crafting elegant, scalable solutions with precision and care. Specialized in backend development and building systems that stand the test of time.</p>
+            </div>
             <div class="profile-image">
-                <!-- Add your profile image here -->
-                <!-- <img src="your-photo.jpg" alt="Your Name"> -->
+                <span class="profile-placeholder">👤</span>
             </div>
-            <h1>Osama Abderahman</h1>
-            <p class="tagline">Senior Software Engineer</p>
-        </header>
-
-        <section class="about">
-            <h2>Professionally</h2>
-            <p>As an experienced developer, I am constantly seeking new challenges that allow me to grow and develop my skills. Currently, I am actively seeking a backend remote position that offers the opportunity to work with a variety of programming languages and technologies. I am open to exploring new languages and frameworks and am eager to expand my knowledge and experience in this field.
-            </p>
         </section>
 
-        <section class="about">
-            <h2>Personally</h2>
-            <p>I like to read, and write. I also like to travel and explore new places.
-            </p>
+        <!-- Professional Section -->
+        <section class="about-section">
+            <div class="content">
+                <div class="section-accent" data-i18n="prof-label">PROFESSIONAL</div>
+                <h2 data-i18n="prof-title">Professionally</h2>
+                <p data-i18n="prof-content">As an experienced developer, I am constantly seeking new challenges that allow me to grow and develop my skills. Currently, I am actively seeking a backend remote position that offers the opportunity to work with a variety of programming languages and technologies. I am open to exploring new languages and frameworks and am eager to expand my knowledge and experience in this field.</p>
+            </div>
+            <div class="image-placeholder">💼</div>
         </section>
 
-        <section class="social-links">
-            <h2>Connect With Me</h2>
+        <!-- Personal Section -->
+        <section class="about-section">
+            <div class="image-placeholder">🌍</div>
+            <div class="content">
+                <div class="section-accent" data-i18n="personal-label">PERSONAL</div>
+                <h2 data-i18n="personal-title">Personally</h2>
+                <p data-i18n="personal-content">I like to read and write. I also enjoy traveling and exploring new places. When I'm not coding, you can find me diving into a good book, crafting engaging content, or discovering hidden gems around the world.</p>
+            </div>
+        </section>
+
+        <!-- Social Section -->
+        <section class="social-section">
+            <h2 data-i18n="connect-title">Let's Connect</h2>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/oaattia/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/oaattia" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="mailto:unholy-pager-kelp@duck.com"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/oaattia/" target="_blank" class="social-link" title="LinkedIn">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://github.com/oaattia" target="_blank" class="social-link" title="GitHub">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="mailto:unholy-pager-kelp@duck.com" class="social-link" title="Email">
+                    <i class="fas fa-envelope"></i>
+                </a>
             </div>
         </section>
-
-       
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <p data-i18n="footer">© 2025 Osama Abderahman. All rights reserved.</p>
+    </footer>
+
+    <!-- Internationalization Script -->
+    <script>
+        const translations = {
+            en: {
+                logo: "OA",
+                name: "Osama Abderahman",
+                title: "Senior Software Engineer",
+                intro: "Crafting elegant, scalable solutions with precision and care. Specialized in backend development and building systems that stand the test of time.",
+                'prof-label': "Professional",
+                'prof-title': "Professionally",
+                'prof-content': "As an experienced developer, I am constantly seeking new challenges that allow me to grow and develop my skills. Currently, I am actively seeking a backend remote position that offers the opportunity to work with a variety of programming languages and technologies. I am open to exploring new languages and frameworks and am eager to expand my knowledge and experience in this field.",
+                'personal-label': "Personal",
+                'personal-title': "Personally",
+                'personal-content': "I like to read and write. I also enjoy traveling and exploring new places. When I'm not coding, you can find me diving into a good book, crafting engaging content, or discovering hidden gems around the world.",
+                'connect-title': "Let's Connect",
+                footer: "© 2025 Osama Abderahman. All rights reserved."
+            },
+            ar: {
+                logo: "أو أ",
+                name: "أسامة عبدالرحمن",
+                title: "مهندس برمجيات أول",
+                intro: "صياغة حلول أنيقة وقابلة للتوسع بدقة وعناية. متخصص في تطوير الخادم وبناء الأنظمة التي تصمد أمام اختبار الزمن.",
+                'prof-label': "احترافي",
+                'prof-title': "احترافياً",
+                'prof-content': "كمطور ذو خبرة، أسعى باستمرار للتحديات الجديدة التي تسمح لي بالنمو وتطوير مهاراتي. حالياً، أبحث بنشاط عن منصب في تطوير الخادم عن بعد يوفر فرصة العمل مع لغات وتقنيات برمجية متنوعة.",
+                'personal-label': "شخصي",
+                'personal-title': "شخصياً",
+                'personal-content': "أحب القراءة والكتابة. كما أستمتع بالسفر واستكشاف أماكن جديدة. عندما لا أكون أكتب الكود، يمكنك أن تجدني منغمساً في كتاب جيد، أو أكتب محتوى جذاب.",
+                'connect-title': "دعونا نتواصل",
+                footer: "© 2025 أسامة عبدالرحمن. جميع الحقوق محفوظة."
+            }
+        };
+
+        function setLanguage(lang) {
+            document.documentElement.lang = lang;
+            
+            document.querySelectorAll('[data-i18n]').forEach(element => {
+                const key = element.getAttribute('data-i18n');
+                if (translations[lang][key]) {
+                    element.textContent = translations[lang][key];
+                }
+            });
+
+            document.querySelectorAll('.lang-btn').forEach(btn => {
+                btn.classList.remove('active');
+                if (btn.getAttribute('data-lang') === lang) {
+                    btn.classList.add('active');
+                }
+            });
+
+            localStorage.setItem('language', lang);
+        }
+
+        document.querySelectorAll('.lang-btn').forEach(btn => {
+            btn.addEventListener('click', () => {
+                setLanguage(btn.getAttribute('data-lang'));
+            });
+        });
+
+        const savedLang = localStorage.getItem('language') || 'en';
+        setLanguage(savedLang);
+    </script>
 </body>
-</html> 
+</html>
