--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         .profile-image img {
             width: 100%;
             height: 100%;
-            object-fit: none;
+            object-fit: contain;
         }
 
         /* Sections */
