Replace profile image PNG with JPG format for improved quality

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ I’m a software engineer who enjoys building and improving backend systems, esp
                 </div>
             </div>
             <div class="profile-image">
-                <img src="img/profile-image.png" alt="Osama Abderahman">
+                <img src="img/profile-image.jpg" alt="Osama Abderahman">
             </div>
         </section>
     </div>
